static/themes/default/style.css
*
{
	position: static;
	font-family: Georgia, serif; /* "Segoe UI", "Trebuchet MS", "Helvetica", "Arial", sans-serif; */
}

.olh_wrapper 	{
		width: 604px;
		min-height: 800px;
		margin: 15px;
		}
.olh_item	{ 
		overflow:auto; 
		} 
.olh_user	{
		width: 150px;
		float: left;
		margin: 0;
		padding: 0;
		min-height: 50px;
		}

.olh_message	{
		width: 450px;
		float: right;
		margin: 0;
		padding: 0;
		min-height: 50px;
		}

.olh_pages	{
		text-align: justify;
		font-size: 8px;
		font-family: courier, sans-serif, monospace;
		}

.bbquote	{
		font-style: italic;
		}

.bbcode		{
		font-family: monospace;
		display: block;
		border: 1px dotted #000;
		padding: 10px;
		margin-left: 25px;
		margin-right: 25px;
		font-size: 10px;
		line-height: 12px;
		font-style: italic;
		background: #e2e2e2;
		}

pre
{
	font-family: "rez ascii", "Lucida Console", monospace;
}

html
{
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
	border: none;
	position: absolute;
	left: 0;
	top: 0;
	background-color: #fff;
	font-size: 9pt;
}

html#transparent
{
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
	border: none;
	position: absolute;
	left: 0;
	top: 0;
	background: transparent;
    font-size: 9pt;
}

body#site
{
	width: 100%;
	height: 350px;
	margin: 0;
	padding: 0;
	border: none;
	position: absolute;
	left: 0;	
	top: 0;
	overflow: visible;
	background-color: #fc3 !important;
	background-color: #fff;
	background-image: url("flamboyant.png");
	background-repeat: repeat-x;
}

h1, h2, h3
{
	border-width: 1px;
	border-top-color: #fda;
	border-left-color: #fda;
	border-right-color: #961;
	border-bottom-color: #961;
	border-style: solid;
	background-color: #e90;
	background-image: url("shine.png");
	background-position: center center;
	background-repeat: repeat-x;
	color: #210;
}

.headline
{
	vertical-align: middle;
}

.date
{
	position: absolute;
	right: 8px;
	bottom: .25ex;
	font-size: 9pt;	
}

h1
{
	font-size: 15pt;
}

h2
{
	font-size: 12pt;
	position: relative;
	vertical-align: middle;
}

div.pmview {
	vertical-align: top;
	border: 1px solid #aaa;
	background-color:#fff;
	width: 85%;
}

p
{
	margin: 0;
	margin-top: 1em;
}

a
{
	text-decoration: none;
    font-weight: bold;
}

a:link
{
	color: #a60;
}

a:visited
{
	color: #850;
}

a:hover
{
	text-decoration: underline;
}

img
{
	border: 0;
	vertical-align: bottom;
}

#rightside
{
	float: right;
	display: inline;
	position: relative;
	width: 230px;
	margin: 8px;
	border-width: 1px;
	border-style: solid;
	border-color: #ccc;
	border-top-color: #fda; /* stupid ie */
	border-right-color: #444;
	border-bottom-color: #444;
	background-color: transparent;
	background-image: url("bland.png");
	text-align: center;
	display: inline;
}

#sidebar
{
	float: left;
	display: inline;
	position: relative;
	width: 230px;
	margin: 8px;
	border-width: 1px;
	border-style: solid;
	border-color: #ccc;
	border-top-color: #fda; /* stupid ie */
	border-right-color: #444;
	border-bottom-color: #444;
	background-color: transparent;
	background-image: url("bland.png");
	text-align: center;
	display: inline;
}

h3
{
	margin: -1px;
	font-size: 9pt;
	text-align: center;
	margin-bottom: 1ex;
}

#rightside ul
{
	padding: 0;
	margin-top: 1ex;
	margin-bottom: 2ex;
	display: inline-block;
	list-style-type: none;
	text-align: left;
}

#rightside ul li
{
	background-position: 0px 50%;
	background-repeat: no-repeat;
	min-height: 16px;
	padding-left: 16px;
	display: block;
}

#sidebar ul
{
	padding: 0;
	margin-top: 1ex;
	margin-bottom: 2ex;
	display: inline-block;
	list-style-type: none;
	text-align: left;
}

#sidebar ul li
{
	background-position: 0px 50%;
	background-repeat: no-repeat;
	min-height: 16px;
	padding-left: 16px;
	display: block;
}

#home 		{background-image: url("/static/house.png");}
#songs		{background-image: url("/static/music.png");}
#song-platform		{background-image: url("/static/sound.png");}
#artists	{background-image: url("/static/user_green.png");}
#compilations   {background-image: url("/static/recplay_ico.png");}
#recent	        {background-image: url("/static/new.png");}
#menuqueue	{background-image: url("/static/script.png");}
#search		{background-image: url("/static/find.png");}
#forum		{background-image: url("/static/user_comment.png");}
#profile	{background-image: url("/static/user.png");}
#favorites	{background-image: url("/static/heart.png");}
#register	{background-image: url("/static/page_white_edit.png");}
#logout		{background-image: url("/static/door_out.png");}
#login		{background-image: url("/static/door_in.png");}
#admin		{background-image: url("/static/door.png");}
#inbox		{background-image: url("/static/email.png");}
#unap-artists   {background-image: url("/static/user_green.png");}
#unap-groups    {background-image: url("/static/group.png");} 
#unap-labels    {background-image: url("/static/transmit_blue.png");}
#unap-links     {background-image: url("/static/link.png");}
#groups         {background-image: url("/static/group.png");} 
#labels		{background-image: url("/static/transmit_blue.png");}
#links		{background-image: url("/static/link.png");}

#forum, #favorites, #logout
{
	margin-bottom: 1em;
}

p.pmtitle {
    font-weight: bold;
}

#sidebar li a
{
	margin-left: 1ex;
	color: #a60;
}
#rightside li a
{
	margin-left: 1ex;
	color: #a60;
}


#sidebar form
{
	display: block;
	padding: 0;
	padding-top: 1ex;
	margin: 0;
	border: none;
	white-space: nowrap;
}

#blah
{
	display: inline-block;
	width: 176px;
	padding: 0;
	margin: 0;
	padding-right: 11px;
	border: 1px #000 solid;
	height: 16px;
	background-color: transparent;
	background-image: url("hilight.png");
	background-position: center;
}

#makeitso
{
	border: none;
	width: 16px;
	margin-left: -16px;
	background-color: transparent;
	background-image: url("/static/comment.png");
	background-repeat: no-repeat;
	background-position: center center;
	padding-left: 8px;
	padding-right: 8px;
}
/* ... */

